[package]
name = "evernode_se_integration_tests"
version = "0.1.0"
edition = '2021'

[dev-dependencies]
base64 = "0.13.0"
ed25519-dalek = "1.0.1"
failure = "0.1.8"
hex = "0.4.2"
lazy_static = "1.4.0"
rand = "0.7.3"
serde_json = "1.0.57"
tokio = { version = "1.19", features = ["rt-multi-thread"] }
reqwest = "0.11.11"

ton_block = { git = "https://github.com/tonlabs/ever-block.git", tag = "1.9.104" }
ton_client = { git = 'https://github.com/tonlabs/ever-sdk.git', package = "ton_client", tag = "1.44.3" }
ton_types = { git = "https://github.com/tonlabs/ever-types.git", tag = "2.0.28" }

