[package]
edition = '2021'
build = 'build.rs'
name = 'evernode_se'
version = '0.42.1'

[dependencies]
# External
anyhow = '1.0'
base64 = '0.13'
clap = '3.2'
ed25519-dalek = '2.0'
hex = '0.4'
http = '0.2'
iron = '0.6'
jsonrpc-http-server = '18.0.0'
lazy_static = '1.4.0'
log = '0.4'
log4rs = '1.2'
num = '0.4'
num-traits = '0.2'
parking_lot = '0.12'
rand = '0.8'
reqwest = '0.9'
router = '0.6.0'
serde = '1.0'
serde_derive = '1.0'
serde_json = { features = ['preserve_order'], version = '1.0' }
thiserror = '1.0'

lockfree = { git = 'https://github.com/everx-labs/lockfree.git', package = 'lockfree' }

# Domestic
ever_block = { git = 'https://github.com/everx-labs/ever-block', tag = '1.11.15', features = [ 'gosh' ] }
ever_block_json = { git = 'https://github.com/everx-labs/ever-block-json', tag = '0.9.28' }
ever_executor = { git = 'https://github.com/everx-labs/ever-executor', tag = '1.18.17', features = [ 'signature_with_id', 'gosh' ] }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm', tag = '2.2.16', features = [ 'gosh' ] }

[dev-dependencies]
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.7.6' }
