[package]
build = "../build/build.rs"
name = "adnl"
version = "0.0.4"
description = "ADNL library"

[dependencies]
aes-ctr = "^0.3.0"
arrayref = "0.3.5"
base64 = "0.10.1"
bytes = "0.4.12"
clap = { version = "2.33.0", optional = true }
curve25519-dalek = "^1.2.3"
ed25519-dalek = "1.0.0-pre.4"
error-chain = { version = "^0.12", default-features = false }
failure = "0.1.5"
hex = "^0.4.0"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.8"
log4rs = { version = "0.8.3", optional = true }
rand = "0.7.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "^1.0.41"
sha2 = "^0.8.0"
stream-cancel = { version = "0.4.4", optional = true }
tokio = "0.1.20"
x25519-dalek = "^0.5.2"
socket2 = "0.3.11"
tokio-io-timeout = "0.3.1"

ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git" }
ton_api = { git = "https://github.com/tonlabs/ton-labs-tl.git", package = "ton_api" }

[features]
client = []
server = ["stream-cancel", "lazy_static"]
test_client = ["clap", "client", "lazy_static", "log4rs"]


