[package]
name = "poa"
version = "0.0.1"

#[lib]
#name = "poa"
#crate-type = ["rlib", "dylib"]

[dependencies]

# External
ed25519 = "1.0.1"
ed25519-dalek = "1.0.0-pre.4"
error-chain = { version = "^0.12", default-features = false }
log = "0.4.5"
parking_lot = "0.7.1"
rand = "0.7.2"
sha2 = "^0.8"

# TBD
byteorder = "^1"
ethcore-io = { path = "parity/util/io" }
heapsize = "0.4"
itertools = "0.5"
keccak-hash = "0.1"
kvdb = "0.1"
macros = { path = "parity/util/macros" }
memory-cache = { path = "parity/util/memory_cache" }
parity-bytes = "0.1"
rlp = { version = "0.3.0", features = ["ethereum"] }
rustc-hex = "1.0"
unexpected = { path = "parity/util/unexpected" }

# In-house
#ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git", default-features = false, features = ["full"] }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git", default-features = false }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

[dev-dependencies]
serde = "^1.0.79"
serde_derive = "^1.0.79"
serde_json = "^1.0"

[features]
ci_run = []
log_file = []
verbose = []
# Run JSON consensus tests.
#json-tests = ["ethcore-transaction/json-tests", "test-helpers", "tempdir", "to-pod-full"]
# Compile test helpers
#test-helpers = ["tempdir"]
# Enables slow 'to-pod-full' method for use in tests and evmbin.
#to-pod-full = []
