[package]
name = 'poa'
version = '0.0.1'

#[lib]
#name = "poa"
#crate-type = ["rlib", "dylib"]

[dependencies]

# External
ed25519 = '1.0.1'
ed25519-dalek = '1.0.0-pre.4'
error-chain = { default-features = false, version = '^0.12' }
log = '0.4.5'
parking_lot = '0.7.1'
rand = '0.7.2'
sha2 = '^0.8'

# TBD
byteorder = '^1'
ethcore-io = { path = 'parity/util/io' }
heapsize = '0.4'
itertools = '0.5'
keccak-hash = '0.1'
kvdb = '0.1'
macros = { path = 'parity/util/macros' }
memory-cache = { path = 'parity/util/memory_cache' }
parity-bytes = '0.1'
rlp = { features = [ 'ethereum' ], version = '0.3.0' }
rustc-hex = '1.0'
unexpected = { path = 'parity/util/unexpected' }

# In-house
ton_vm = { default-features = false, git = 'https://github.com/tonlabs/ton-labs-vm', tag = '1.8.38' }
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block', tag = '1.7.51' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types', tag = '1.11.2' }


[dev-dependencies]
serde = '^1.0.79'
serde_derive = '^1.0.79'
serde_json = '^1.0'

[features]
ci_run = [  ]
log_file = [  ]
verbose = [  ]
# Run JSON consensus tests.
#json-tests = ["ethcore-transaction/json-tests", "test-helpers", "tempdir", "to-pod-full"]
# Compile test helpers
#test-helpers = ["tempdir"]
# Enables slow 'to-pod-full' method for use in tests and evmbin.
#to-pod-full = []
