[package]
build = "../build/build.rs"
name = "ton_node_startup"
version = "0.28.5"

[dependencies]
clap = "2.32.0"
log = "0.4.6"
log4rs = "0.8.3"
ton_node = { path = "../ton_node", features = ["startup_node"], package = "ton_node_old" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_block_json = { git = "https://github.com/tonlabs/ton-labs-block-json.git" }
ton_executor = { git = "https://github.com/tonlabs/ton-labs-executor.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_vm = { git = "https://github.com/tonlabs/ton-labs-vm.git" }
ed25519-dalek = "1.0.0-pre.4"
reqwest = "0.9.7"
http = "0.1.17"
iron = "0.6.0"
router = "0.6.0"
parking_lot = "0.7.1"
serde = "^1.0.79"
serde_derive = "^1.0.79"
serde_json = "^1.0"
base64 = "0.10.0"

adnl = { path = "../adnl", features = ["server"] }
