[package]
build = "../build/build.rs"
name = "ton_node_startup"
version = "0.30.3"

[dependencies]
clap = "2.32.0"
log = "0.4.6"
log4rs = "0.8.3"
ton_node = { path = "../ton_node", features = ["startup_node"], package = "ton_node_old" }
ton_block = { git = 'https://github.com/tonlabs/ton-labs-block', tag = '1.7.39' }
ton_block_json = { git = "https://github.com/tonlabs/ton-labs-block-json.git", tag = '0.7.5' }
ton_executor = { git = 'https://github.com/tonlabs/ton-labs-executor', tag = '1.15.56' }
ton_types = { git = 'https://github.com/tonlabs/ton-labs-types', tag = '1.10.12' }
ton_vm = { git = 'https://github.com/tonlabs/ton-labs-vm', tag = '1.8.32' }
ed25519-dalek = "1.0.0-pre.4"
reqwest = "0.9.7"
http = "0.1.17"
iron = "0.6.0"
router = "0.6.0"
parking_lot = "0.7.1"
serde = "^1.0.79"
serde_derive = "^1.0.79"
serde_json = "^1.0"
base64 = "0.10.0"
