[package]
description = 'Ethcore network library'
homepage = 'http://parity.io'
license = 'GPL-3.0'
name = 'ethcore-network'
version = '1.12.0'
authors = [ 'Parity Technologies <admin@parity.io>' ]

[dependencies]
error-chain = { default-features = false, version = '0.12' }
parity-crypto = '0.2'
ethcore-io = { path = '../io' }
ethereum-types = '0.4'
ethkey = { path = '../../ethkey' }
ipnetwork = '0.12.6'
rlp = { features = [ 'ethereum' ], version = '0.3.0' }
libc = '0.2'
parity-snappy = '0.1'

[dev-dependencies]
assert_matches = '1.2'
